[package]
name = "epubparse"
version = "0.2.1"
authors = ["jannes <jannes.dev@posteo.net>"]
edition = "2018"
license = "MIT"
description = "Parse epub and convert to text-only Book structure"
readme = "README.md"
repository = "https://github.com/jannes/epubparse/"
keywords = ["epub", "ebook"]
exclude = [
    "test_resources/*",
]

[dependencies]
thiserror = "1.0"
regex = "1"
xmltree = "0.10.2"
zip = { version = "0.5", default-features = false, features = ["deflate"] }
serde = { version = "1.0", features = ["derive"] }