[package]
name = "epubparse"
version = "0.2.1"
authors = ["jannes <jannes.dev@posteo.net>"]
edition = "2018"
license = "MIT"
description = "Parse epub and convert to text-only Book structure"
readme = "README.md"
repository = "https://github.com/jannes/epubparse/"
keywords = ["epub", "ebook"]
exclude = [
    "test_resources/*",
]

[dependencies]
thiserror = "1.0"
regex = "1"
xmltree = { git = "https://github.com/jannes/xmltree-rs", branch = "parse_with_config" }
zip = { version = "0.5", default-features = false, features = ["deflate"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
serde_json = "1"