[package]
name = "epubparse-wasm"
version = "0.2.5"
authors = ["jannes <jannes.dev@posteo.net>"]
edition = "2018"
license = "MIT"
description = "Parse epub and convert to text-only Book structure"
readme = "README.md"
repository = "https://github.com/jannes/epubparse/"
keywords = ["epub", "ebook"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
epubparse = { path = "../epubparse-rs" }
wasm-bindgen = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
